[project]
name = "prism"
version = "0.0.0"
description = "PRISM (Portfolio Returns & Investment Statistics Manager)"
authors = [{ name = "Veicm" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "yfinance>=1.4.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.1.0",
  "ruff>=0.15.13",
  "pre-commit>=4.6.0",
  "build>=1.5.0",
]

[project.scripts]
prism = "prism.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.setuptools.packages.find]
where = ["src"]
